# flywheel

./: .gitignore  README.md  pyproject.toml
flywheel/: __init__.py  backlog.py  cli.py  config.py  context.py  critique.py  engine.py  guardrails.py  models.py  output.py  prompt.py  provenance.py  runner.py  triage.py
flywheel/rubrics/: amr-evidence-framework.md
tests/: test_backlog.py  test_critique.py  test_dashboard.py  test_engine.py  test_guardrails.py  test_output.py  test_provenance.py  test_triage.py
