[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flywheel-loop"
version = "0.1.0"
description = "An autonomous experiment loop: pick the next experiment off a backlog, run it, write it up, brainstorm follow-ups back onto the backlog, repeat."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
# Output gate: validate a run's report against the reportly standard.
reportly = ["reportly @ git+https://github.com/dtch1997/reportly.git"]
# Live status dashboard.
dashboard = ["stagehand @ git+https://github.com/dtch1997/stagehand.git"]

[project.scripts]
flywheel = "flywheel.cli:main"

[tool.hatch.metadata]
allow-direct-references = true   # git refs in [project.optional-dependencies]

[tool.hatch.build.targets.wheel]
packages = ["flywheel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
